Fix white space for other columns

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 
 #sidebar {
   min-width: 30vw;
-  /* max-width: 30vw; */
+  max-width: 50vw;
   flex: 0.3;
   font-family: Norse-Bold;
 }
@@ -44,6 +44,7 @@ body {
   display: flex;
   font-family: Roboto-Regular;
   padding: 1em;
+  min-width: 70vw;
 }
 
 #header {
@@ -124,7 +125,7 @@ body {
 
 .inputcolumn1,
 .inputcolumn2 {
-  padding: 40px;
+  padding: 50px;
   display: flex;
   flex-direction: column;
 }
